<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrayBG"
        android:fitsSystemWindows="true"
        tools:context="net.weatharium.weathariumnew.MainActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="265dp"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"

                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"

                app:title="Loading..."
                app:toolbarId="@+id/toolbar">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/toolbar_loading"
                        style="@style/TextShadow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"

                        android:text="@string/loading"
                        android:textSize="36sp"
                        />

                    <ImageView
                        android:id="@+id/header"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:contentDescription="Parallax"
                        android:fitsSystemWindows="true"
                        android:onClick="reloadPicture"
                        android:scaleType="centerCrop"
                        android:src="@drawable/blue"
                        app:layout_collapseMode="parallax" />

                    <TextView
                        android:id="@+id/tv_app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:text="@string/app_name"
                        android:textAllCaps="true"
                        android:textColor="@color/colorWhite"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:transitionName="@string/email_auth_transition" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="88dp"
                        android:layout_alignBottom="@+id/header"
                        android:background="@drawable/scrim_bottom" />

                </RelativeLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />


            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"
            android:src="@drawable/ic_search_black_24dp" />

        <include layout="@layout/content_main" />

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"

        app:headerLayout="@layout/nav_header"
        app:itemTextAppearance="@style/NavigationDrawerStyle"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>
    <!--app:headerLayout="@layout/nav_header_main"-->